prepare needed frontend components

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <body>
     <div>
         <rating class="block left">Loading...</rating>
+        <today-results class="block left">Loading...</today-results>
     </div>
     
     <div class="clearfix"></div>
